--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -40,7 +40,7 @@
                 required >
                 
     
-                <button type="submit">Register</button>
+                <button [disabled]='registerForm.invalid' type="submit">Register</button>
                 <button type="button" class="cancelbtn" type="reset">Cancel</button>
               </div>
             </table>
