--- a/src/app/flight-view/flight-view.component.html
+++ b/src/app/flight-view/flight-view.component.html
@@ -60,7 +60,7 @@
       <div class="card">
         <img src="./assets/air2.jpg" style="width:10%">
         <div class="card_content">
-          <div >
+          <div class="time">
             <h1><b>16:40</b></h1><br>
             <p style="color: darkgray;">New Delhi</p>
           </div>
@@ -77,7 +77,7 @@
             <h1><b>₹ 3,418</b></h1>
           </div>
           <div >
-            <button class="button button2">View Prices</button>
+            <button class="button button2">Book</button>
           </div>
         </div>
       </div>
