admin login changes done

--- a/src/app/adminlogin/adminlogin.component.html
+++ b/src/app/adminlogin/adminlogin.component.html
@@ -22,15 +22,14 @@
             </div>
           </div>
           <div class="form-bottom" style="color: white;">
-            <form (ngSubmit)="loginCustomer()" method="POST">
+            <form #loginForm ='ngForm' (ngSubmit)="loginCustomer(#loginForm)" method="POST">
               <div class="containerb">
                 <label for="uname"><b>Username</b></label>
                 <input
                   type="text"
                   placeholder="Enter Username"
                   name="uname"
-                  [(ngModel)]="adminlogin.email"
-                />
+                  [(ngModel)]="adminlogin.email" required/>
                 <span id="userSpan" style="color: red;"></span><br />
 
                 <label for="psw"><b>Password</b></label>
@@ -38,10 +37,10 @@
                   type="text"
                   placeholder="Enter Password"
                   name="psw"
-                  [(ngModel)]="adminlogin.password"
+                  [(ngModel)]="adminlogin.password" required
                 />
                 <span id="pswSpan" style="color: red;"></span><br />
-                <button class="buttonb" type="submit">Login</button>
+                <button class="buttonb" [disabled]='loginForm.invalid' type="submit">Login</button>
                 <label>
                   <input type="checkbox" checked="checked" name="remember" />
                   Remember me
@@ -55,7 +54,7 @@
             </form>
             <h2>{{ status?.message }}</h2>
             <h2>{{ status?.id }}</h2>
-            <h2>{{ status?.userNname }}</h2>
+            <h2>{{ status?.userName }}</h2>
           </div>
         </div>
       </div>
