--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -12,7 +12,7 @@
         <div class="card">
             
           <h2 style="text-align: center;"> Hello Where do you want to explore?</h2>
-          
+          <h2 style="text-align: center; color: red;">{{status?.message}}</h2>
            <form #registerForm='ngForm' (ngSubmit)='registerAUser(registerForm)' > 
             <table align="center">
             
@@ -49,6 +49,6 @@
       </div>
       </div>
      </div>
-     <h1>{{status?.message}}</h1>
+     
      </body>
 </html>
