--- a/src/app/thank-you/thank-you.component.html
+++ b/src/app/thank-you/thank-you.component.html
@@ -1,1 +1,1 @@
-<h2>Thank you for registering with us..You will receive an email soon once your account is activated.</h2>
+<h2>Thank you for choosig us for your travel..Stay Safe...Fly Safe!!!.</h2>
