--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -11,7 +11,7 @@
   <a routerLink="/addflightlink"><i class="fa fa-fw fa-plus"></i> Add Flight</a><br>
   <a routerLink="/deleteflightlink"><i class="fa fa-fw fa-trash"></i> Delete Flight</a><br>
   <a routerLink="/updateflightlink"><i class="fa fa-fw fa-wrench"></i> Update Flight</a><br/>
-  <a routerLink="/classeslink"><i class="fa fa-fw fa-search"></i> Search Flight</a>
+  <a routerLink="/searchflightlink"><i class="fa fa-fw fa-search"></i> Search Flight</a>
 </div>
 
 <div class="main">
